# encoder_ai_instagram

./: .gitignore  CLAUDE.md  FilmLook_Portra400_SkinPriority_D65.cube  HollywoodCinema_Ultimate_v6.7B_1.5IRE_Instagram8bit_NeutralShadows.cube  MANIFEST.in  MANUAL_INSTALACAO.txt  README.md  Reels_Encoder_v2_FINAL.py  cineon_pipeline.py  clean_cache.py  compare_frames.py  ebu_meter.py  enhance_ai_log.json  enhance_visualizer.py  pyproject.toml  requirements.txt  version.py
.claude/skills/instagram-reels-encoder/: SKILL.md
.claude/skills/instagram-reels-encoder/scripts/: analyze_source.py  (+3 more)
.github/workflows/: ci.yml  pylint.yml
docs/: terminal-ui-masterplan.md
enhance/: __init__.py  ffmpeg_filters.py  processor.py  profile.py  sampler.py  test_analyzers.py  test_ebu_meter.py  test_hdr_pipeline.py  test_loudnorm.py  test_mock_cnn.py  test_processors.py  test_profile.py  test_rotation_strip.py  test_scale_filter.py
enhance/ai/: __init__.py  interface.py  mock_cnn.py
enhance/analyzers/: __init__.py  banding.py  detail.py  noise.py
tools/: clean_cache.py  compare_frames.py  compare_frames_interactive.py  fetch_ffmpeg.ps1  gen_readme_assets.py  time_to_frame.py  time_to_frame_interactive.py  verificador_instalacao.py
ui/: __init__.py  aspect.py  binaries.py  components.py  config.py  dashboard.py  launcher.py  preflight.py  probe.py  prompts.py  test_aspect.py  test_binaries.py  test_components.py  test_config.py  test_dashboard.py  test_launcher.py  test_packaging.py  test_preflight.py  test_probe.py  test_readme_assets.py  test_theme.py  test_version.py  theme.py
(+11 files in other folders)
